tests/fail/mytest8.rx
/*
Test: Unit Test 8 - Local variable scope
*/
fn main() {
    let a: i32 = 1;
    {
        let a: i32 = 2;
        exit(a);
    }
    exit(a);
}
